tests/inputs/valid/map-05.js
const map = [
    ['','+','-','L','-','+'],
    ['','|','','','+','A','-','+'],
    ['@','B','+','','+','+','','H'],
    ['','+','+','','','','','x']
];

module.exports = map;
