tests/inputs/invalid/map-07.js
const map = [
    ['@','-','-','A','-','+'],
    ['','','','','','|'],
    ['','','','',''],
    ['','','','','','B','-','x'],
];

module.exports = map;
